--- a/SFW-Player/build.xml
+++ b/SFW-Player/build.xml
@@ -7,7 +7,7 @@
 	<property name="src"   location="src"/>
     <property name="build" location="build"/>
 	<property name="dist"  location="dist"/>
-	<property name="lib"   location="lib"/>
+	<property name="lib"   location="../embedd-remote-repo"/>
 	<property name="eclipse.jar" location="${env.ECLIPSE_DIR}/lib/eclipse.jar"/>
 	
 	<fileset id="libraries" dir="${lib}">
