--- a/SFW-Player/pom.xml
+++ b/SFW-Player/pom.xml
@@ -78,5 +78,11 @@
     	<version>1.6.0_10</version>
 	</dependency>
 	
+	<dependency>
+    	<groupId>org.apache</groupId>
+    	<artifactId>commons-collections</artifactId>
+    	<version>3.2.1</version>
+	</dependency>
+	
   </dependencies>
 </project>
